r142 - october, 29, 209
	* compte : actions > code refactoring to use new myUser methods
	* compteActionsTest.php : new tests
	* loginActionsTest.php has been removed (module doesn't longer exist)
	* AssociationForm.class.php : field 'enregistre_par' has been removed to
	  avoid bugs due to session behaviour
	* sfGuardTestFunctional : signout() method
	* activite : actions > new > field 'mis_a_jour_par' is not set for creation
	* myUser : getUserId() > fixed awesome bug... (association id was returned)
	* MembreHelper : format_membre > code is more beautiful !
	* activite : templates > showSuccess > a special message is displayed if
	  activity has not been edited yet
	  

r141 - october, 27, 2009
	* membre : templates > _picture > input is a Membre object, and 'alt'
	  attribute has been set for the picture
	* myUser.class.php : getAssociationId() and getUserId()
	* activite : actions > code refactoring to use new myUser methods
	* symfony configure:author Adrien Mogenet
	* activite : templates > _form.php > error message is displayed after the
	  input field
	* activiteActionsTest.php : basic scenarios
	* association : actions > code refactoring to use new myUser methods
	* associationActionsTest.php : code beautifier ;-)
	

r140 - october, 27, 2009
	* ProjectConfiguration.class.php > checks that the file exists or display
	  a friendly error message
	* login : module has been removed (currently empty so useless)
	* association : actions > _canRegisterAnotherAssociation > redirect to
	  install and not to /install
	* install : templates > configDatabaseSuccess.php > error icon is displayed
	* new plugin has been set up : sfImageTransformPlugin	  
	* membre : actions > processForm > make thumbnails when uploading 
	  user's picture
	* layout.php : new menu item "faces"
	* membre : new action "faces"
	* MembrePeer : new constant PICTURE_DIR
	* Membre : new method getPictureURI
	* Membre : new partial _picture
	* main.css : custom style for "_picture" partial